# android_inject

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CheckUnity.cpp  CheckUnity.version  LICENSE  Logger.hpp  README.md  UnityCheat.cpp  UnityCheat.hpp  UnityCheat.version  UnityCheat2.cpp  build.ps1  debug.ps1  inject2.cpp  inject_service.cpp  inject_speed.cpp  main.cc  main.cpp  selinux.cc  selinux.h  shark_inject.c  shark_inject.h
Il2cppResolver/: ResolverInit.hpp
dlfcn/: CMakeLists.txt  InjectModule.cpp  dlfcn_compat.cpp  dlfcn_compat.h  dlfcn_nougat.cpp  dlfcn_nougat.h  load_dex.cpp  load_dex.h
docs/: Frida so层中的hook.md  hook方式.md
frida-inject-custom/: CMakeLists.txt  agent.c  agent.version  inject.c  readme.md  victim.c
frida-test/: README.md  libtimetest.so.json  loader.py  loader3.py  loader4.py  package-lock.json  package.json  s1.js  s2.js  s3.js  s4.js
utils/: AndroidProp.hpp  CMakeLists.txt  Logger.hpp  MapTools.cpp  MapTools.hpp  MemoryTools.cpp  MemoryTools.hpp  progress.cc  progress.cpp  progress.h  selinux.cpp
